Fix borders making mobile pictures too wide

--- a/assets/sass/_content.scss
+++ b/assets/sass/_content.scss
@@ -105,6 +105,9 @@
       width: 100%;
       padding-left: 0;
       padding-right: 0;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
       border: 2px solid $lightblue;
     }
   }
